<resources>
    <string name="app_name">Atividade3</string>

    <string name="titulo">PassAPP</string>
    <string name="label_login">Login</string>
    <string name="dica_login">Digite seu login</string>
    <string name="label_senha">Senha</string>
    <string name="dica_senha">Digite sua senha</string>
    <string name="botao_entrar">Entrar</string>
    <string name="criar_cadastro">Criar Usuário</string>
    <string name="botao_esqueci_senha">Esqueci minha senha</string>
    <string name="bem_vindo">Seja Bem Vindo.</string>
    <string name="selecione_evento">Eventos disponíveis:</string>
    <string name="comprar_ingresso">Comprar Ingressos</string>
    <string name="cadastro">Cadastrar novo usuário</string>
    <string name="insira_login">Crie um login de usuário</string>
    <string name="insira_senha">Crie uma senha</string>
    <string name="repita_senha">Repita sua senha abaixo</string>
    <string name="insira_sua_foto">Insira sua foto</string>
    <string name="cancelar">Cancelar</string>
    <string name="trocar_senha">Trocar Senha</string>
    <string name="buscar_cadastro">Buscar Cadastro</string>
    <string name="quantidade">Quantidade de Ingressos</string>
    <string-array name="spinner">
        <item>Selecione a quantidade</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>
    <string name="descricao_confirmado">Compra confirmada</string>
    <string name="verificar_compras">Verificar compras</string>
    <string name="bem_vindo_admin">Bem-vindo, Administrador</string>
    <string name="gerenciar_eventos">Gerencie os eventos abaixo:</string>
    <string name="adicionar_evento">Adicionar Evento</string>
    <string name="excluir_evento">Excluir Evento</string>
    <string name="titulo_cadastrar_evento">Cadastrar Evento</string>
    <string name="descricao_imagem_evento">Imagem do evento</string>
    <string name="hint_nome_evento">Nome do Evento</string>
    <string name="hint_local_evento">Local do Evento</string>
    <string name="hint_data_evento">Data (dd/MM/yyyy)</string>
    <string name="hint_descricao_evento">Descrição do Evento</string>
    <string name="botao_salvar_evento">Salvar</string>
    <string name="botao_cancelar_evento">Cancelar</string>
    <string name="hint_num_ingressos">Número de ingressos</string>





</resources>