<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_cadastro_usuario"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.CadastroUsuarioActivity">
    <TextView
        android:id="@+id/txtTítulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp"
        android:text="@string/titulo"
        android:textSize="40dp"
        app:layout_constraintBottom_toTopOf="@+id/txtCadastro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.065"
        app:layout_constraintStart_toStartOf="parent"/>
    <TextView
        android:id="@+id/txtCadastro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:text="@string/cadastro"
        app:layout_constraintBottom_toTopOf="@+id/txtLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.071"
        app:layout_constraintStart_toStartOf="parent"/>
    <TextView
        android:id="@+id/txtLogin"
        android:layout_width="36dp"
        android:layout_height="15dp"
        android:layout_marginEnd="356dp"
        android:layout_marginBottom="20dp"
        android:text="@string/label_login"
        app:layout_constraintBottom_toTopOf="@+id/edtLogin"
        app:layout_constraintEnd_toEndOf="parent"/>
    <EditText
        android:id="@+id/edtLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:hint="@string/dica_login"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/txtSenha"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.079"
        app:layout_constraintStart_toStartOf="parent"/>
    <TextView
        android:id="@+id/txtSenha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/label_senha"
        app:layout_constraintBottom_toTopOf="@+id/edtSenha"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.043"
        app:layout_constraintStart_toStartOf="parent"/>
    <EditText
        android:id="@+id/edtSenha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="31dp"
        android:ems="10"
        android:hint="@string/dica_senha"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/txtInsiraSenhaNovamente"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.094"
        app:layout_constraintStart_toStartOf="parent"/>
    <TextView
        android:id="@+id/txtInsiraSenhaNovamente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="@string/repita_senha"
        app:layout_constraintBottom_toTopOf="@+id/edtSenhaNovamente"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.061"
        app:layout_constraintStart_toStartOf="parent"/>
    <EditText
        android:id="@+id/edtSenhaNovamente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:ems="10"
        android:hint="@string/dica_senha"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.094"
        app:layout_constraintStart_toStartOf="parent"/>
    <LinearLayout
        android:id="@+id/lnlBotoes"
        android:layout_width="375dp"
        android:layout_height="95dp"
        android:layout_marginBottom="40dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.444"
        app:layout_constraintStart_toStartOf="parent">
        <Button
            android:id="@+id/btnEntrar"
            android:layout_width="150dp"
            android:layout_height="45dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="16dp"
            android:text="@string/criar_cadastro"
            app:backgroundTint="@color/botao_confirmar"
            app:layout_constraintWidth_percent="0.45"/>
        <Button
            android:id="@+id/btnCancelar"
            android:layout_width="150dp"
            android:layout_height="45dp"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="16dp"
            android:text="@string/cancelar"
            app:backgroundTint="@color/botao_cancelar"
            app:layout_constraintWidth_percent="0.45"/>
    </LinearLayout>
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="70dp"
        android:layout_height="84dp"
        android:src="@mipmap/ic_launcher"
        android:layout_marginBottom="12dp"
        app:layout_constraintBottom_toTopOf="@+id/lnlBotoes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:src="@tools:sample/avatars"/>
</androidx.constraintlayout.widget.ConstraintLayout>
