<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp"
    tools:context=".Activities.EventosActivity">

    <TextView
        android:id="@+id/txtBemVindo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bem_vindo"
        android:textSize="25sp"
        android:gravity="center"
        android:paddingBottom="15dp" />

    <TextView
        android:id="@+id/tstSelecioneEvento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/selecione_evento"
        android:textSize="18sp"
        android:paddingBottom="8dp" />

    <LinearLayout
        android:id="@+id/lnlEventosDisponiveis"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="16dp"
        android:gravity="center">

        <Button
            android:id="@+id/btnComprarIngresso"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/comprar_ingresso"
            android:backgroundTint="@color/botoes"
            android:textColor="@android:color/white"
            android:layout_marginEnd="8dp" />

        <Button
            android:id="@+id/btnVerificarCompras"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/verificar_compras"
            android:backgroundTint="@color/botoes"
            android:textColor="@android:color/white"
            android:layout_marginStart="8dp" />

    </LinearLayout>

</LinearLayout>
